Squashed release-1.0.43
commit 3e7e46fa85bc489f6e090f7f0a5ef1a536d16c2c
Author: dpolivaev@users.sourceforge.net <>
Date:   Sun May 9 10:39:20 2010 +0200

    Resources_ja.properties
    OptionPanel.java :  display message after the dialog is closed

commit c980b5266f0b1bbd1e5fb7cd25e7711e010b8e79
Author: dpolivaev@users.sourceforge.net <>
Date:   Tue May 4 21:26:54 2010 +0200

    Show tooltips on option control elements (buttons, check boxes etc) and not only on the labels

commit e22019f5c697d9ff1a7765ea8e62165262541069
Author: dpolivaev@users.sourceforge.net <>
Date:   Tue May 4 21:10:32 2010 +0200

    translations

commit bb1428a4552d784662b50d2e264c50d8eee8b66c
Author: dpolivaev@users.sourceforge.net <>
Date:   Tue May 4 20:48:55 2010 +0200

    623: Unable to input text to find, using "Edit > Find" after swiching...

commit f0f9984624edc32fe5167657f04c86b4ee21ad08
Author: dpolivaev@users.sourceforge.net <>
Date:   Tue May 4 20:11:24 2010 +0200

    622: Tooltip "extract_link_from_text.tooltip" not displayed

commit b543111c63e7e835b4285935c5d93f3ac3763890
Merge: 7a34ea5 21fe87f
Author: dpolivaev@users.sourceforge.net <>
Date:   Sun May 2 19:09:36 2010 +0200

    merge

commit 7a34ea58240800ecbfb9f627a9890875b650ada9
Author: dpolivaev@users.sourceforge.net <>
Date:   Sun May 2 18:58:56 2010 +0200

    0000620]: Unable to open a Pocket FreeMind file in Freeplane

commit e10fda085824db5c97e5e3ba69fbabf8268be49f
Author: dpolivaev@users.sourceforge.net <>
Date:   Sun May 2 14:25:17 2010 +0200

    -

commit 9a799adb94852d6ced8c94b1f4f9c02f5e92d8f4
Author: dpolivaev@users.sourceforge.net <>
Date:   Sun May 2 14:15:00 2010 +0200

    remove dependencies from google-translate-api

commit 21fe87feef4b0ab8a383822940e8feabf90503ab
Author: boercher <>
Date:   Sun May 2 05:01:30 2010 +0200

    adjusted to recent change of FpStringUtils

commit c3aaa6820cb538fc79ea8a99492a6ae4dad0406a
Author: dpolivaev@users.sourceforge.net <>
Date:   Sat May 1 15:20:03 2010 +0200

    mo